[2019-04-25 18:47:00.024] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:47:00.024] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:47:00.024] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:47:00.024] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:47:00.024] [logger] [info] Material 0 was added to project test
[2019-04-25 18:47:00.024] [logger] [info] Material 0 was added to project test
[2019-04-25 18:52:43.235] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:52:43.235] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:52:43.235] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:52:43.235] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:52:43.235] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:52:43.235] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:52:43.235] [logger] [info] Material 0 was added to project test
[2019-04-25 18:52:43.235] [logger] [info] Material 0 was added to project test
[2019-04-25 18:58:39.476] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:58:39.476] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:58:39.476] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:58:39.476] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:58:39.476] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:58:39.476] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 18:58:39.476] [logger] [info] Material 0 was added to project test
[2019-04-25 18:58:39.476] [logger] [info] Material 0 was added to project test
[2019-04-25 18:58:58.579] [logger] [info] Material 0 was added to project test