@@ -37,6 +37,7 @@
                 "frameAspect": "16:10",
                 "id": 0,
                 "language": "ENG",
+                "packaging": "Plastic",
                 "retailPrice": 9.99,
                 "runTime": 120,
                 "subtitles": "ENG"
@@ -59,6 +60,7 @@
                 "frameAspect": "16:9",
                 "id": 0,
                 "language": "ENG",
+                "packaging": "Plastic",
                 "retailPrice": 13.99,
                 "runTime": 655,
                 "subtitles": "ENG"
@@ -82,6 +84,7 @@
                         "format": "dvd",
                         "frameAspect": "4:3",
                         "language": "GER",
+                        "packaging": "Plastic",
                         "retailPrice": 25.99,
                         "runTime": 90,
                         "subtitles": "GER"
@@ -103,6 +106,7 @@
                         "format": "dvd",
                         "frameAspect": "4:3",
                         "language": "ENG",
+                        "packaging": "Plastic",
                         "retailPrice": 25.99,
                         "runTime": 160,
                         "subtitles": "ENG"
@@ -112,6 +116,7 @@
                         "format": "dsdvd",
                         "frameAspect": "4:3",
                         "language": "ENG",
+                        "packaging": "Plastic",
                         "retailPrice": 25.99,
                         "runTime": 420,
                         "sides": [
@@ -158,6 +163,7 @@
                 "frameAspect": "4:3",
                 "id": 0,
                 "language": "ENG",
+                "packaging": "Plastic",
                 "retailPrice": 55.98,
                 "runTime": 326,
                 "sides": [
@@ -206,6 +212,7 @@
                 "frameAspect": "6:10",
                 "id": 0,
                 "language": "eng",
+                "packaging": "Plastic",
                 "retailPrice": 9.99,
                 "runTime": 2000,
                 "subtitles": "fra"
@@ -220,6 +227,7 @@
                 "frameAspect": "6:10",
                 "id": 0,
                 "language": "test",
+                "packaging": "Plastic",
                 "retailPrice": 9.99,
                 "runTime": 2000,
                 "subtitles": "test"
@@ -257,6 +265,7 @@
                 "frameAspect": "6",
                 "id": 0,
                 "language": "eng",
+                "packaging": "Plastic",
                 "retailPrice": 9.99,
                 "runTime": 2000,
                 "subtitles": "test"
@@ -268,6 +277,7 @@
                 "frameAspect": "6:10",
                 "id": 0,
                 "language": "eng",
+                "packaging": "Cardboard",
                 "retailPrice": 9.99,
                 "runTime": 2000,
                 "subtitles": "eng"
@@ -291,6 +301,7 @@
                 "frameAspect": "6:16",
                 "id": 0,
                 "language": "eng",
+                "packaging": "Plastic",
                 "retailPrice": 9.99,
                 "runTime": 12000,
                 "subtitles": "eng"
